...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="payment">Payment</string>
    <string name="history">Trip History / Support</string>
    <string name="help">Help</string>
    <string name="promotions">Promotions</string>
    <string name="donate">Round Up</string>
    <string name="drive_with_ride_city">Drive with %1$s</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ut">University of Texas</string>

    <!--MainMapFragment-->
    <string name="requesting">Requesting&#8230;</string>
    <string name="enter_pickup_address">Enter pickup</string>
    <string name="enter_destination_address">Enter destination</string>
    <string name="set_pickup_location">Set Pickup location</string>
    <string name="minutes">MIN</string>
    <string name="error_places_autocomplete">Unable to fetch address. Please contact support</string>
    <string name="oops">OOPS</string>
    <string name="no_available_cars">Set Pickup location</string>
    <string name="coming_soon_in_your_area">Coming soon in your area</string>

...
    <string name="slider_label_eta">ETA</string>
    <string name="slider_label_people">MAX SIZE</string>
    <string name="slider_label_pricing">VIEW PRICING</string>
    <string name="slider_label_estimate">GET RIDE ESTIMATE</string>

    <!--DonateFragment-->
    <string name="choose_a_round_up">Choose to round up the cost of your fare to help support the local community. Please select your preferred charity.</string>
    <string name="round_up_fare">Round up fare</string>
    <string name="round_up">Round up</string>
    <string name="choose_charity">Choose charity</string>

    <!--PromotionsFragment-->
    <string name="promotions_title">Enter Promo Code</string>
...
